cabal-version:      3.0
name:               recreation-alert
version:            0.1.0.0

synopsis:
    Alerts when there is a campsite is available on recreation.gov

homepage:           fpunfold.com

license:            MIT
license-file:       LICENSE
author:             Amogh Rathore
maintainer:         amoghdroid09@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common extensions
    default-extensions:
        OverloadedStrings, DeriveGeneric, OverloadedRecordDot,
        DuplicateRecordFields, FlexibleInstances, TemplateHaskell

library
    import:           warnings, extensions
    exposed-modules:
        Recreation.Client
        Recreation.Client.Internal
        Recreation.PushbulletNotifier
        Recreation.Availability
        Recreation.Predicate
        Recreation.Types

    build-depends:
        base ^>=4.16.3.0,
        bytestring ^>=0.11.3.1,
        uri-encode ^>=1.5.0.7,
        containers ^>=0.6.5.1,
        hslogger ^>=1.3.1.0,
        exceptions ^>=0.10.7,
        mtl ^>=2.3.1,
        http-types ^>=0.12.3,
        aeson ^>=2.0.3.0,
        time ^>=1.12.2,
        http-conduit ^>=2.3.8,
        http-client ^>= 0.7.14,

    hs-source-dirs:   src

    default-language: Haskell2010

executable recreation-alert
    import:           warnings, extensions
    main-is:          Main.hs
    other-modules:
        Env, CLI
    build-depends:
        base ^>=4.16.3.0,
        bytestring ^>=0.11.3.1,
        aeson ^>=2.0.3.0,
        mtl ^>=2.3.1,
        filepath ^>=1.4.2.2,
        optparse-applicative ^>=0.17.0.0,
        time ^>=1.12.2,
        hslogger ^>=1.3.1.0,
        directory ^>=1.3.7.1,
        recreation-alert
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite recreation-alert-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules:
        Recreation.ClientSpec
        Recreation.PredicateSpec
    main-is:          Spec.hs
    build-tool-depends: hspec-discover:hspec-discover ^>=2.10.6
    build-depends:
        base ^>=4.16.3.0,
        hspec ^>=2.10.6,
        time ^>=1.12.2,
        bytestring ^>=0.11.3.1,
        aeson ^>=2.0.3.0,
        recreation-alert
